tests/test_files_pa3/new/SemanticErrors/UndefineType2.ic
class A {
	
	void sfunc() {
		B b;
	}
	
	static void main(string[] args) { }

}